cambio del titulo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Pokédex de Dinosaurios</h1>
+        <h1>Dinodex</h1>
     </header>
     <main>
         <div class="card tyrannosaurus-rex">
