cambio de footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokédex de Dinosaurios</title>
+    <title>Dinodex</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,6 @@
                 <p>Altura: 4 metros</p>
                 <p>Peso: 9 toneladas</p>
                 <p>Período: Cretácico superior</p>
-                <!-- Añadir más información si es necesario -->
             </div>
         </div>
         <div class="card triceratops">
@@ -27,10 +26,8 @@
                 <p>Altura: 3 metros</p>
                 <p>Peso: 8 toneladas</p>
                 <p>Período: Cretácico superior</p>
-                <!-- Añadir más información si es necesario -->
             </div>
         </div>
-        <!-- Repetir esta estructura para cada dinosaurio -->
         <div class="card brachiosaurus">
             <div class="info">
                 <h2 style="margin-top: -16px;">Brachiosaurus</h2>
@@ -97,7 +94,7 @@
         </div>
     </main>
     <footer>
-        <p>© 2024 Pokédex de Dinosaurios. Todos los derechos reservados.</p>
+        <p>© 2024 Dinodex de Dinosaurios. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
